--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Saku's HTML Experimentation or smthin idk</title>
+  <title>Asakai's Website</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
 </head>
@@ -10,7 +10,7 @@
 <body background="https://wallpaper.dog/large/20414270.png">
   <div class="window" style="width: 400px">
     <div class="title-bar">
-      <div class="title-bar-text">Just a avg dev lol</div>
+      <div class="title-bar-text">My code is self-explainatory</div>
       <div class="title-bar-controls">
         <button aria-label="Minimize"></button>
         <button aria-label="Maximize"></button>
@@ -18,14 +18,15 @@
       </div>
     </div>
     <div class="window-body">
+      <p><strong style= "color: black" This site does absolutely nothing other than waste the reader and the developer's time</strong></p>
       <p> Stuff you should check out!:</p>
       <ul class="tree-view">
         <li><a href="https://coffeescript.org/"><strong style="color: brown">CoffeeScript</strong></a></li>
-        <li><a href="https://jdan.github.io/98.css/"><strong style="color: purple">88.css (The thing this site is made
-              with)</strong></a></li>
-        <li><a href="http://www.kohala.com/start/recipes/ultimatecookie.html"><strong style="color: Teal">Richard
-              Stevens' Cookie Recipie</strong></a></li>
-        <li><a href="https://youtube.com/watch?v=dQw4w9WgXcQ"><strong style="color: red">Free Coffee</strong></a></li>
+<li><a href="https://jdan.github.io/98.css/"><strong style="color: purple">88.css (The thing this site is made with)</strong></a></li>
+<li><a href="http://www.kohala.com/start/recipes/ultimatecookie.html"><strong style="color: Teal">Richard Stevens' Cookie Recipie</strong></a></li>
+<li><a href="http://www.gitea.moe/Nightm4re"><strong style="color: magenta">My Gitea</strong></a></li>
+<li><a href="https://github.com/asakaidev"><strong style="color: red">Github</strong></a></li>  
+<li><a href="https://youtube.com/watch?v=dQw4w9WgXcQ"><strong style="color: red">Free Coffee</strong></a></li>
       </ul>
       <div class="status-bar">
         <p class="status-bar-field">Press Alt + F4 for help</p>
