--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
 </head>
 
-<body background="https://wallpaper.dog/large/20414270.png">
+<body background="https://wallpapercave.com/dwp2x/wp7505119.jpg">
   <div class="window" style="width: 400px">
     <div class="title-bar">
       <div class="title-bar-text">My code is self-explainatory</div>
@@ -24,18 +24,22 @@
         <li><a href="https://coffeescript.org/"><strong style="color: brown">CoffeeScript</strong></a></li>
 <li><a href="https://jdan.github.io/98.css/"><strong style="color: purple">88.css (The thing this site is made with)</strong></a></li>
 <li><a href="http://www.kohala.com/start/recipes/ultimatecookie.html"><strong style="color: Teal">Richard Stevens' Cookie Recipie</strong></a></li>
-<li><a href="http://www.gitea.moe/Nightm4re"><strong style="color: magenta">My Gitea</strong></a></li>
+<li><a href="https://gitea.com/nightm4re"><strong style="color: magenta">My Gitea</strong></a></li>
 <li><a href="https://github.com/asakaidev"><strong style="color: red">Github</strong></a></li>  
-<li><a href="https://youtube.com/watch?v=dQw4w9WgXcQ"><strong style="color: red">Free Coffee</strong></a></li>
+<li><a href="https://youtube.com/watch?v=dQw4w9WgXcQ"><strong style="color: blue">Free Coffee</strong></a></li>
+        <li><a href="mai.html"><strong style="color: black">Random Mai (Pls tell me how to improve this thing!)</strong></a></li>  
+
       </ul>
       <div class="status-bar">
         <p class="status-bar-field">Press Alt + F4 for help</p>
         <p class="status-bar-field">CPU Usage: Over 9000%</p>
+      
       </div>
     </div>
   </div>
   </div>
   </div>
+  
 </body>
 
 </html>
