--- a/mai.html
+++ b/mai.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Mai-San Kawaii desu!</title>
+    <title>go watch the anime</title>
   <img id="mai">
     <script type="text/javascript">
         window.onload = function () {
